updated js files

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="content-right">
                 <!-- Main section - current weather in searched city -->
                 <div class="city-weather border p-2">
-                    <div class="city-content">
+                    <div class="city-content d-inline">
                         <h3 class="city-name">City Name</h3>
                         <h3 class="current-date"></h3>
                         <img class="weather-icon"></img>
@@ -49,35 +49,40 @@
                 <div class="five-day-container border mt-3">
                     <h4 class="five-day-title">5-day Forecast:</h4>
                     <div class="cards-forecast">
-                        <div class="card" id="card-0">
-                            <p id="card-date-0"></p>
-                            <p class="forecast-temp">Temp: <span id="card-temp-0"></span></p>
-                            <p class="forecast-wind">Wind: <span id="card-wind-0"></span></p>
-                            <p class="forecast-humidity">Humidity: <span id="card-humidity-0"></span></p>
-                        </div>
                         <div class="card" id="card-1">
                             <p id="card-date-1"></p>
+                            <img id="card-icon-1"></img>
                             <p class="forecast-temp">Temp: <span id="card-temp-1"></span></p>
                             <p class="forecast-wind">Wind: <span id="card-wind-1"></span></p>
-                            <p class="forecast-humidity">Humidity: <span id="card-humidity-1"></span></p>
+                            <p class="forecast-humidity">Humidity: <span id="card-humidity-0"></span></p>
                         </div>
                         <div class="card" id="card-2">
                             <p id="card-date-2"></p>
+                            <img id="card-icon-2"></img>
                             <p class="forecast-temp">Temp: <span id="card-temp-2"></span></p>
                             <p class="forecast-wind">Wind: <span id="card-wind-2"></span></p>
-                            <p class="forecast-humidity">Humidity: <span id="card-humidity-2"></span></p>
+                            <p class="forecast-humidity">Humidity: <span id="card-humidity-1"></span></p>
                         </div>
                         <div class="card" id="card-3">
                             <p id="card-date-3"></p>
+                            <img id="card-icon-3"></img>
                             <p class="forecast-temp">Temp: <span id="card-temp-3"></span></p>
                             <p class="forecast-wind">Wind: <span id="card-wind-3"></span></p>
                             <p class="forecast-humidity">Humidity: <span id="card-humidity-3"></span></p>
                         </div>
                         <div class="card" id="card-4">
                             <p id="card-date-4"></p>
+                            <img id="card-icon-4"></img>
                             <p class="forecast-temp">Temp: <span id="card-temp-4"></span></p>
                             <p class="forecast-wind">Wind: <span id="card-wind-4"></span></p>
                             <p class="forecast-humidity">Humidity: <span id="card-humidity-4"></span></p>
+                        </div>
+                        <div class="card" id="card-5">
+                            <p id="card-date-5"></p>
+                            <img id="card-icon-5"></img>
+                            <p class="forecast-temp">Temp: <span id="card-temp-5"></span></p>
+                            <p class="forecast-wind">Wind: <span id="card-wind-5"></span></p>
+                            <p class="forecast-humidity">Humidity: <span id="card-humidity-5"></span></p>
                         </div>
                     </div>
                 </div>  
